Refactor commands and improve logging messages